--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,92 @@
-/* You can add global styles to this file, and also import other style files */
+.bodyDashboard {
+    background-color: #15181f;
+
+}
+
+
+.secondBodyDashboard {
+    background-color: #2C2C3A;
+
+}
+
+.botonesPrincipales {
+    /* background-color: #CC0000 !important; */
+    background-color: #F5CB43 !important;
+    color: white !important;
+}
+
+.textoprincipalcolor {
+    color: #F5CB43 !important;
+}
+
+.btn-custom {
+    background-color: #F5CB43 !important;
+    /* Fondo personalizado */
+    color: white !important;
+    /* Texto blanco */
+    border-color: transparent;
+    /* Sin bordes */
+}
+
+.btn-custom:hover {
+    background-color: #f6bd00 !important;
+    /* Cambia el color al hacer hover */
+    color: white !important;
+}
+
+.custom-swal {
+    background-color: #15181f !important;
+    /* Color de fondo de la alerta */
+    color: white !important;
+    /* Color del texto */
+    box-shadow: 0 4px 20px rgba(255, 255, 255, 0.1) !important;
+    /* Sombra blanca */
+    border-radius: 10px;
+    /* Esquinas redondeadas opcionales */
+}
+
+.custom-swal .swal2-title,
+.custom-swal .swal2-html {
+    color: white !important;
+    /* Asegúrate de que el título y el contenido sean blancos */
+}
+
+.custom-swal .swal2-confirm {
+    background-color: #F5CB43 !important;
+    /* Color del botón de confirmación */
+    color: white !important;
+    /* Color del texto del botón */
+}
+
+.custom-swal .swal2-cancel {
+    background-color: transparent !important;
+    /* Color de fondo del botón de cancelación */
+    color: #F5CB43 !important;
+    /* Color del texto del botón de cancelación */
+    border: 2px solid #F5CB43 !important;
+    /* Borde del botón de cancelación */
+}
+
+/* Estilos para navegadores WebKit (Chrome, Safari, Opera) */
+::-webkit-scrollbar {
+    width: 10px;
+    /* Ancho de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-track {
+    background: #15181f;
+    /* Color del fondo de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #2C2C3A;
+    /* Color del 'pulgar' de la barra de desplazamiento */
+    border-radius: 10px;
+    /* Bordes redondeados */
+}
+
+/* Cambiar el color al pasar el ratón sobre el pulgar */
+::-webkit-scrollbar-thumb:hover {
+    background: #5a6268;
+    /* Color más oscuro al pasar el ratón */
+}
