--- a/src/app/pages/dashboard/index/index.component.html
+++ b/src/app/pages/dashboard/index/index.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column flex-md-row vh-100 bodyDashboard text-white">
     <!-- Sidebar -->
-
+<!-- 
     <div [class.opened]="sidebarOpened" class="sidebar secondBodyDashboard">
         <ul>
             <li *ngFor="let channel of placeholderStreams">
@@ -13,47 +13,35 @@
     <button (click)="toggleSidebar()" class="max-height:10px;">
         <i *ngIf="sidebarOpened" class="fa-solid fa-angles-left"></i>
         <i *ngIf="!sidebarOpened" class="fa-solid fa-angles-down"></i>
-        <!-- <img [src]="sidebarOpened ? 'close.png' : 'open.png'" alt="Toggle"> -->
-    </button>
+    </button> -->
 
     <!-- Main content -->
     <div class="flex-grow-1">
         <!-- Header -->
-        <header
-            class="secondBodyDashboard p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
+    
 
-            <div class="d-flex mb-3 mb-md-0">
-                <input type="text" placeholder="Search" class="form-control bg-dark text-white me-2" />
-                <button class="btn btn-warning">
-                    <i class="fas fa-search"></i>
-                </button>
-            </div>
+<!-- Stream grid -->
+<p-carousel [value]="placeholderStreams" [numVisible]="5" [numScroll]="1" [circular]="true" [autoplayInterval]="3000"
+    styleClass="custom-carousel" class="secondBodyDashboard" [responsiveOptions]="responsiveOptions">
 
-            <div class="d-flex align-items-center position-relative">
-                <div class="me-3">
-                    <i class="fas fa-bell"></i>
-                </div>
-                <div class="me-3">
-                    <i class="fas fa-comments"></i>
-                </div>
-                <div class="me-3 position-relative" (click)="menuOpen=!menuOpen">
-                    <img src="{{usuarioActual?.logo}}" alt="Usuario" class="user-logo" style="cursor:pointer">
-
-                    <!-- Submenú flotante -->
-                    <div *ngIf="menuOpen" class="dropdown-menu show mt-2"
-                        style="display: block; position: absolute; right: 0;">
-                        <a class="dropdown-item" [routerLink]="['/tv', usuarioActual.nombre]">Perfil</a>
-                        <a class="dropdown-item" href="#">Ajustes</a>
-                        <a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a>
+    <ng-template pTemplate="item" let-item>
+        <div class="p-3">
+            <div class="product-item" [routerLink]="['/tv', item.nombre]">
+                <div class="product-item-content">
+                    <div class="mb-3">
+                        <img src="{{item.logo}}" alt="Image" style="border-radius: 8px;" />
+                    </div>
+                    <div>
+                        <h4 class="product-title">{{item.nombre}}</h4>
+                        <p class="product-description">{{item.nombre}}</p>
                     </div>
                 </div>
-            </div>
+                </div>
+                </div>
+    </ng-template>
+    </p-carousel>
 
-        </header>
-
-
-        <!-- Stream grid -->
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
             <div class="row bodyDashboard" style="margin-top: 100px;">
                 <div class="col-12 col-md-6 mb-4" *ngFor="let stream of placeholderStreams">
                     <div class="bg-dark rounded overflow-hidden">
@@ -68,7 +56,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
