--- a/src/app/pages/reproductor/video/video.component.css
+++ b/src/app/pages/reproductor/video/video.component.css
@@ -3,6 +3,43 @@ video {
     height: 100%;
     object-fit: cover;
     /* O 'contain' si quieres mantener la relación de aspecto */
-    background-color: #F5CB43;
+    /* background-color: #F5CB43; */
     /* Para verificar el tamaño */
+}
+.container {
+    text-align: center;
+    /* background-color: white;  */
+}
+
+.logo {
+    width: 200px;
+    height: 200px;
+    background-color: #333;
+    border-radius: 50%;
+    margin: 0 auto 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+}
+
+.message {
+    font-size: 44px;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.sub-message {
+    font-size: 18px;
+    color: white;
+}
+
+.portada {
+    width: 100%;
+    height: 100%;
+}
+
+.videoOffline {
+    display: none;
 }
