--- a/src/app/pages/auth/login-component/login-component.component.html
+++ b/src/app/pages/auth/login-component/login-component.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bodyDashboard vh-100 d-flex p-0">
   <div class="image-container d-none d-lg-block">
     <img
-      src="https://www.minecraft.net/content/dam/minecraftnet/games/minecraft/game-updates/Minecraft-Tricky-Trials_Featured-Image-0_570x321.jpg?height=1080&width=1080"
+      src="assets/login/intro.jpg"
       alt="Minecraft-style landscape" class="background-image img-fluid" />
   </div>
   <div class="form-container  mx-auto  w-100">
