--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid vh-100 d-flex p-0">
-  <div class="form-container mx-auto  w-100">
-    <div class="form-content p-4 rounded shadow h-100">
+<div class="container-fluid bodyDashboard vh-100 d-flex p-0">
+  <div class="form-container  mx-auto  w-100">
+    <div class="form-content secondBodyDashboard p-4 rounded shadow h-100">
       <div class="text-center">
         <img [src]="'assets/login/logo.png'" alt="Game logo" class="logo mb-3" />
         <h2 class="title text-white">Registro</h2>
