--- a/src/app/pages/dashboard/usuario/perfil/perfil.component.html
+++ b/src/app/pages/dashboard/usuario/perfil/perfil.component.html
@@ -67,7 +67,7 @@
             </div>
 
             <!-- Chat Móvil -->
-            <div *ngIf="isMobile" class="mobile-chat d-flex flex-column">
+            <div *ngIf="isMobile" class="mobile-chat bodyDashboard d-flex flex-column">
                 <div class="p-3 border-bottom">
                     <h2 class="font-weight-bold h5">CHAT DEL STREAM (Móvil)</h2>
                 </div>
