--- a/src/app/pages/dashboard/usuario/ajustes/ajustes.component.html
+++ b/src/app/pages/dashboard/usuario/ajustes/ajustes.component.html
@@ -10,7 +10,8 @@
                 </a>
             </div>
             <ul class="list-group">
-                <li class="list-group-item cursor-pointer" (click)="cargado('Cuenta')">
+                <li class="list-group-item cursor-pointer" [ngClass]="TabSeleccionado === 'Cuenta' ? 'btn-custom-selected' : ''"
+                    (click)="cargado('Cuenta')">
                     <a class=" d-flex align-items-center">
                         <i class="fa fa-home me-2 text-white"></i>
                         <span class="d-none d-md-inline text-white">Cuenta</span>
@@ -56,13 +57,13 @@
                     <button class="btn btn-outline-primary w-100">Administrar membresía</button>
                 </div> -->
                 <div class="card-body" *ngIf="TabSeleccionado==='Cuenta'">
-                    <app-user-data></app-user-data>
+                    <app-user-data [usuarioActual]="DataUsuario"></app-user-data>
                 </div>
                 <div class="card-body" *ngIf="TabSeleccionado==='Stream'">
-                    <app-auth-stream></app-auth-stream>
+                    <app-auth-stream [usuarioActual]="DataUsuario"></app-auth-stream>
                 </div>
                 <div class="card-body" *ngIf="TabSeleccionado==='Password'">
-                    <app-password></app-password>
+                    <app-password [usuarioActual]="DataUsuario"></app-password>
                 </div>
             </div>
 
