--- a/src/app/pages/sharedComponents/header/header.component.html
+++ b/src/app/pages/sharedComponents/header/header.component.html
@@ -3,11 +3,27 @@
         <img [src]="'assets/login/logo.png?h'" [routerLink]="['/dashboard']" alt="Game logo" class="logo mb-3" />
     </div>
     <div class="d-flex mb-3 mb-md-0">
-        <input type="text" placeholder="Search" class="form-control bg-dark text-white me-2" />
-        <button class="btn btn-warning">
-            <i class="fas fa-search"></i>
-        </button>
-    </div>
+        <div style="position: relative; width: fit-content;" class="clasePrueba">
+            <div class="d-flex align-items-center">
+                <input type="text" (keyup)="manejarKeyup($event)" (click)="manejarKeyup($event)" placeholder="Buscar un canal"
+                    class="form-control bg-dark text-white me-2" />
+                <button class="btn btn-custom-two">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <ul *ngIf="resultados.length > 0 && !seleccionoCanal" class="resultados-lista">
+                <li *ngFor="let resultado of resultados" (click)="seleccionarCanal(resultado.nombre)">
+                    <img [src]="resultado.logo || 'assets/user/profile.jpg'" alt="{{ resultado.nombre }}" class="imagen-pequena" />
+                    {{ resultado.nombre }}
+                </li>
+            </ul>
+            
+            <p *ngIf="(resultados.length === 0 && nombreSeleccionado && nombreSeleccionadoValidador.length > 0) && !seleccionoCanal"
+                class="resultados-lista">
+                No se encontraron resultados
+            </p>
+            </div>
+            </div>
     <div class="d-flex align-items-center position-relative mb-3 mb-md-0" *ngIf="usuarioActual">
         <div class="me-3">
             <i class="fas fa-bell"></i>
@@ -16,7 +32,8 @@
             <i class="fas fa-comments"></i>
         </div>
         <div class="me-3 position-relative" (click)="toggleMenu($event)">
-            <img [src]="usuarioActual?.logo" alt="Usuario" class="logo" style="cursor:pointer">
+            <img [src]="usuarioActual?.logo  ? usuarioActual.logo : 'assets/user/profile.jpg'" alt="Usuario" class="logo"
+                style="cursor:pointer">
             <div *ngIf="menuOpen" class="dropdown-menu show mt-2" style="display: block; position: absolute; right: 0;">
                 <a class="dropdown-item" (click)="irAPerfil()">Perfil</a>
                 <a class="dropdown-item" (click)="irAjustes()">Ajustes</a>
@@ -36,8 +53,8 @@
         <div class="d-flex align-items-center">
             <i class="fas fa-search mobile-search-icon me-3" (click)="toggleSearch()"></i>
             <ng-container *ngIf="usuarioActual; else loginButton">
-                <div class="position-relative user-menu-container">
-                    <img [src]="usuarioActual.logo" (click)="toggleMenu($event)" alt="Usuario" class="logo"
+                <div class="me-3 position-relative user-menu-container" (click)="toggleMenu($event)">
+                    <img [src]="usuarioActual?.logo  ? usuarioActual.logo : 'assets/user/profile.jpg'" alt="Usuario" class="logo"
                         style="cursor:pointer">
                     <div *ngIf="menuOpen" class="dropdown-menu show mt-2">
                         <a class="dropdown-item" (click)="irAPerfil()">Perfil</a>
@@ -52,6 +69,28 @@
         </div>
     </div>
     <div *ngIf="isSearchVisible" class="mt-3 w-100">
-        <input type="text" placeholder="Search" class="form-control bg-dark text-white" />
+        <div style="position: relative; width: fit-content;" class="clasePrueba">
+            <div class="d-flex align-items-center">
+                <input type="text" (keyup)="manejarKeyup($event)" (click)="manejarKeyup($event)" placeholder="Buscar un canal"
+                    class="form-control bg-dark text-white me-2" />
+                <button class="btn btn-custom-two">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <ul *ngIf="resultados.length > 0 && !seleccionoCanal" class="resultados-lista">
+                <li *ngFor="let resultado of resultados" (click)="seleccionarCanal(resultado.nombre)">
+                    <img [src]="resultado.logo || 'assets/user/profile.jpg'" alt="{{ resultado.nombre }}"
+                        class="imagen-pequena" />
+                    {{ resultado.nombre }}
+                </li>
+            </ul>
+        
+            <p *ngIf="(resultados.length === 0 && nombreSeleccionado && nombreSeleccionadoValidador.length > 0) && !seleccionoCanal"
+                class="resultados-lista">
+                No se encontraron resultados
+            </p>
+        </div>
+        
+        <!-- <input type="text" placeholder="Search" class="form-control bg-dark text-white" /> -->
     </div>
 </header>
